--- a/package.json
+++ b/package.json
@@ -17,22 +17,30 @@
     "@fontsource-variable/urbanist": "^5.0.19",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
+    "d3-scale": "^4.0.2",
     "lottie-web": "^5.12.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2",
+    "react-scrollama": "^2.3.3"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/d3-scale": "^4.0.8",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.33",
     "prettier": "^3.2.1",
+    "sass": "^1.69.7",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
