--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/fredoka": "^5.0.8",
+    "@fontsource-variable/source-code-pro": "^5.0.17",
     "@fontsource-variable/urbanist": "^5.0.19",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
+    "axios": "^1.6.5",
+    "d3": "^7.8.5",
     "d3-scale": "^4.0.2",
     "lottie-web": "^5.12.2",
     "react": "^18.2.0",
@@ -26,9 +30,9 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/d3": "^7.4.3",
     "@types/d3-scale": "^4.0.8",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -41,7 +45,6 @@
     "prettier": "^3.2.1",
     "sass": "^1.69.7",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
 }
